--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <h3>CuttingEdge</h3>
         </div>
         <div class="contactLinks">
-            <a href=""><img src="imageAssets/icons/fbIcon.png"></a>
-            <a href=""><img src="imageAssets/icons/xIcon.png"></a>
-            <a href=""><img src="imageAssets/icons/linkedInIcon.png"></a>
-            <a href="#footer"><img class="call" src="imageAssets/icons/callIcon.png"></a>
+            <a href=""><img src="fbIcon.png"></a>
+            <a href=""><img src="xIcon.png"></a>
+            <a href=""><img src="linkedInIcon.png"></a>
+            <a href="#footer"><img class="call" src="callIcon.png"></a>
         </div>
     </header>
     <nav class="NavBar">
@@ -60,28 +60,28 @@
     </aside>
     <section class="slideshow-container">
         <div class="mySlides fade">
-         <img src="imageAssets/services/ShirtPrinting.jpg" alt="Image of Customized Shirt Printing">
+         <img src="ShirtPrinting.jpg" alt="Image of Customized Shirt Printing">
          <div class="overlay-text">
             <h3> CUSTOMIZED SHIRT PRINTING</h3>
             <p> Transform your ideas, logos and slogans into wearable art</p>
          </div>
         </div>
         <div class="mySlides fade">
-            <img src="imageAssets/services/bannerPrint.jpg" alt="Image of Banner Printing">
+            <img src="bannerPrint.jpg" alt="Image of Banner Printing">
             <div class="overlay-text">
                <h3> BANNER PRINTING</h3>
                <p> Print banners in all formats and for all events with 100% quality  maintained</p>
             </div>
         </div>
         <div class="mySlides fade">
-            <img src="imageAssets/services/cardsPrint.jpg" alt="Image of Card Printing">
+            <img src="cardsPrint.jpg" alt="Image of Card Printing">
             <div class="overlay-text">
                <h3> CARDS PRINTING</h3>
                <p> Print Cards for both business and non-business purposes in any size</p>
             </div>
         </div>
         <div class="mySlides fade">
-            <img src="imageAssets/services/flyerPosterPrint.jpg" alt="Image of Flyer Printing">
+            <img src="flyerPosterPrint.jpg" alt="Image of Flyer Printing">
             <div class="overlay-text">
                <h3> FLYER/POSTER PRINTING</h3>
                <p>Print flyers and posters that does exactly what they intended. Catch the attention.</p>
@@ -127,15 +127,15 @@
     <section id="sec7">
         <h2>OUR COMPLETED JOBS</h2>
         <div class="completedJobsSlides">
-            <img src="imageAssets/completedJobs/FJ-FLYER-Recovered-2.jpg" class="img1 imgSlide" alt="image1">
-            <img src="imageAssets/completedJobs/GOODNEWS-XCHANGE.png" class="img2 imgSlide" alt="image1">
-            <img src="imageAssets/completedJobs/IMG-20220618-WA0008.jpg" class="img3 imgSlide" alt="image1">
-            <img src="imageAssets/completedJobs/20230826_125409_01.jpg" class="img4 imgSlide" alt="image1">
-            <img src="imageAssets/completedJobs/IMG_20221103_124044_606.jpg" class="img5 imgSlide" alt="image1">
-            <img src="imageAssets/completedJobs/URBAN T..REND.jpg" class="img6 imgSlide" alt="image1">
-            <img src="imageAssets/completedJobs/SP.jpg" class="img6 imgSlide" alt="image1">
-            <img src="imageAssets/completedJobs/ACN SOCIAL MEDIA PROFILE.jpg" class="img6 imgSlide" alt="image1">
-            <img src="imageAssets/completedJobs/IS_ME JOTTER FRONT (1).jpg" class="img6 imgSlide" alt="image1">
+            <img src="FJ-FLYER-Recovered-2.jpg" class="img1 imgSlide" alt="image1">
+            <img src="GOODNEWS-XCHANGE.png" class="img2 imgSlide" alt="image1">
+            <img src="IMG-20220618-WA0008.jpg" class="img3 imgSlide" alt="image1">
+            <img src="20230826_125409_01.jpg" class="img4 imgSlide" alt="image1">
+            <img src="IMG_20221103_124044_606.jpg" class="img5 imgSlide" alt="image1">
+            <img src="URBAN T..REND.jpg" class="img6 imgSlide" alt="image1">
+            <img src="SP.jpg" class="img6 imgSlide" alt="image1">
+            <img src="ACN SOCIAL MEDIA PROFILE.jpg" class="img6 imgSlide" alt="image1">
+            <img src="IS_ME JOTTER FRONT (1).jpg" class="img6 imgSlide" alt="image1">
         </div>
     </section>
     <footer id="footer">
