--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,10 @@
             <h3>CuttingEdge</h3>
         </div>
         <div class="contactLinks">
-            <a href=""><img src="imageAssets/icons/fbIcon.png"></a>
-            <a href=""><img src="imageAssets/icons/xIcon.png"></a>
-            <a href=""><img src="imageAssets/icons/linkedInIcon.png"></a>
-            <a href="#footer"><img class="call" src="imageAssets/icons/callIcon.png"></a>
+            <a href=""><img src="fbIcon.png"></a>
+            <a href=""><img src="xIcon.png"></a>
+            <a href=""><img src="linkedInIcon.png"></a>
+            <a href="#footer"><img class="call" src="callIcon.png"></a>
         </div>
     </header>
     <nav class="NavBar">
