--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <section id="sec1">
     <header>
         <div class="toggle-btn">
-            <img src="imageAssets/icons/menuBtn.png" alt="brandlogo">
+            <img src="menuBtn.png" alt="brandlogo">
         </div>
         <div id="logo">
             <img src="logo.jpg" alt="brandlogo">
